# rag

./: .gitignore  arxiv_list_paper_api.py  arxiv_paper.py  arxiv_paper_api.py  arxiv_paper_api_rand_300.py  arxiv_processor.py  benchmark_downloader.py  benchmark_papers.py  chunk_visualiser.py  chunking.py  data_preprocessor.py  data_preprocessor_parallel.py  dataset.py  grobid_arxiv_paper_api.py  grobid_config.json  grobid_preprocessor.py  keyword_algorithms_test_json.py  keyword_algorithms_test_md.py  keyword_specific_test_md.py  lg-modefile.txt.txt  llm_gguf.py  md_data_preprocessor_parallel.py  ollama_server.py  output.json  pdf_process.py  pdf_process_2.py  pyproject.toml  reverse_api.py  tokeniser_check.py  vector_db.py  vector_db_loader.py
benchmark/: selected_papers.txt
paper_metadata/: arxiv2509.20328v1_metadata.json  arxiv2509.20336v1_metadata.json  arxiv2509.20338v1_metadata.json  arxiv2509.20341v1_metadata.json  arxiv2509.20354v1_metadata.json
parser/: batch_index.csv
processed_markdown/: 2509.20279v1_A co-evolving agentic AI system for medical imaging analysis.md  2509.20280v1_HiPerformer_ A High-Performance Global-Local Segmentation Model with   Modular Hierarchical Fusion Strategy.md  2509.20281v1_PerFace_ Metric Learning in Perceptual Facial Similarity for Enhanced   Face Anonymization.md  2509.20295v1_FAST_ Foreground-aware Diffusion with Accelerated Sampling Trajectory   for Segmentation-oriented Anomaly Synthesis.md  2509.20318v1_A Comprehensive Evaluation of YOLO-based Deer Detection Performance on   Edge Devices.md  2509.20322v1_VisualMimic_ Visual Humanoid Loco-Manipulation via Motion Tracking and   Generation.md  (+8 more)
(+739 files in other folders)
