[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "feedparser>=6.0.12",
    "frontend>=0.0.3",
    "pdfplumber>=0.11.7",
    "pillow>=11.3.0",
    "pylatexenc>=2.10",
    "pymupdf>=1.26.4",
    "qdrant-client>=1.15.1",
    "requests>=2.32.5",
]
