[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "docling>=2.54.0",
    "grobid-client-python>=0.0.17",
    "pip>=25.2",
    "pypdf>=6.1.0",
    "qdrant-client>=1.15.1",
    "requests>=2.32.5",
    "spacy>=3.8.7",
    "transformers>=4.56.2",
]
